--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,11 @@
     "description" : "ReCaptcha Client",
     "license"     : "MIT",
     "require": {
+        "php"                     : "~7.0",
         "guzzle/guzzle"           : "~3.0"
     },
     "require-dev": {
-        "silex/silex"             : "1.0.x-dev@dev",
+        "silex/silex"             : "~2.0",
         "symfony/http-foundation" : "~2.0"
     },
     "suggest": {
